protocols/tests/fifo/pop_before_push_fail.out
error: The two expressions did not evaluate to the same value
   ┌─ fifo/fifo.prot:48:19
   │
48 │         assert_eq(DUT.data_o, output); 
   │                   ^^^^^^^^^^^^^^^^^^ LHS Value: ValueOwned(00000000000000000000000000000000), RHS Value: ValueOwned(00000000000000000000000000000100)

